--- a/main.html
+++ b/main.html
@@ -8,9 +8,9 @@
 
 <body>
 	<!-- the entire body must be written by student -->
-	<P class="yellow">Paragraph-1</P>
-	<P class="red">Paragraph-2</P>
-	<P class="green">Paragraph-3</P>
+	<P id="yellow">Paragraph-1</P>
+	<P id="red">Paragraph-2</P>
+	<P id="green">Paragraph-3</P>
     <script type="text/javascript" src="./script.js">
 </script>
 
